Fixed resume page to look better on smaller resolutions

--- a/css/resume.css
+++ b/css/resume.css
@@ -32,6 +32,7 @@ a:hover
 {
   font-size: 16px;
   margin-bottom: 4px;
+  white-space: nowrap;
 }
 
 .jumbotron h5
